--- a/12MegaBlog/package.json
+++ b/12MegaBlog/package.json
@@ -13,7 +13,9 @@
     "@reduxjs/toolkit": "^2.3.0",
     "@tinymce/tinymce-react": "^5.1.1",
     "appwrite": "^16.0.2",
+    "autoprefixer": "^10.4.20",
     "html-react-parser": "^5.1.18",
+    "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
